# karst_analysis

./: .gitignore  .mailmap  CHANGELOG.md  LICENSE  NOTES_open_questions.md  README.md  main.py  pyproject.toml  requirements.txt
config/: ert_panels.yml  pipeline.yml  pipeline_default.yml  slopes_jobs_2022_02.yml  slopes_jobs_2022_02_lrs69d_extra.yml
data/: dgh_fwl_estimation.csv  selection_fwl_ic_bic_dgh.csv  statistics_profiles.csv  statistics_profiles_methods.csv  statistics_profiles_raw.csv  stats_MZ_SZ.csv  stats_zones.csv
docs/: 01_processing_usage.md  api_reference_pw.md
modules/: 01_processing.py  analysis.py  load.py  plots.py  processing.py  statistics_fwl_estimation.py  statistics_zones.py  utils.py
notebooks/: 01_preprocess_batch.ipynb  01_processor.ipynb  02_breakpoints.ipynb  02_compare_smoothing.ipynb  02_evaluation.ipynb  02_stats_zones.ipynb  03_breakpoints_compute.ipynb  03_evaluation.ipynb  04_breakpoints_evaluate.ipynb  04_stats_zones.ipynb  05_export_for_external_projects.ipynb  06_caliper_pipeline.ipynb  07_caliper_video_panels.ipynb  08_sec_caliper_video_panels.ipynb  09_sec_robustness_analysis.ipynb  10_sec_caliper_convergence.ipynb  evaluation.ipynb  filter_statistics.ipynb  fwl_estimation.ipynb  fwl_estimator.ipynb  fwl_statistics.ipynb  processor.ipynb  profiles_70_75_evaluation.ipynb  profiles_70_75_processor.ipynb  resample_data.ipynb  statistics_zones.ipynb  stats_zones.ipynb
results/: runs.csv  sec_breakpoints_summary_2022_02.csv  well_statistics.csv
scripts/: 01_processing.py  03_stats_zones.py  breakpoints_batch.py  (+18 more)
(+262 files in other folders)
