[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "karst_analysis"
version = "0.1.0"
description = "Multi-method analysis of a coastal karst aquifer (Andros, Bahamas)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary - University of Bristol" }
authors = [
    { name = "Andros Research" },
]
keywords = ["hydrogeology", "karst", "aquifer", "conductivity", "ERT"]
dependencies = [
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "piecewise-regression>=1.4",
    "tqdm>=4.65",
    "plotly>=5.15",
    "ipykernel>=6.25",
    "ipywidgets>=8.0",
    "jupyterlab>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/karst_analysis"]

[tool.ruff]
line-length = 100
target-version = "py310"
[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["_backup_*", ".venv", "*.egg-info", "build", "dist"]
